Update User Reports | Alignment Fix

--- a/src/styles/admin/reports.module.css
+++ b/src/styles/admin/reports.module.css
@@ -92,7 +92,8 @@
 .tableHeaderRow {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-weight: 400;
-  text-align: left;
+  text-align: center;
+  max-width: 100px;
   /* border: 1px solid red; */
 }
 
@@ -117,8 +118,10 @@
 
 .table .tableSingleCell {
   font-size: 0.8rem;
+  max-width: 100px;
   padding: 2% 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .table .report_status_container {
@@ -133,7 +136,8 @@
   font-weight: 300;
   background: #263252;
   color: white;
-  padding: 2% 10%;
+  padding: 5px 10px;
+  width: 70px;
   border-radius: 15px;
 }
 
